# internal-monologue

./: .gitignore  README.md  logue.py  pyproject.toml  requirements.txt  setup.py
google-docs/: app.py
logue/: logue.py
