[tool.poetry]
name = "internal-monologue"
version = "0.1.0"
description = ""
authors = ["Devashish"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.28.0"
google-auth-oauthlib = "^0.4.6"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
